# claude_agent_environment

./: .coverage  .gitignore  LICENSE  Makefile  README.md  cae  install.sh  pyproject.toml  setup.py  setup.sh  test_install_path.sh
.github/workflows/: test.yml
claude_agent_environment/: __init__.py  claude_template.md  main.py  version_check.py
tests/: conftest.py  test_branch_handling.py  test_directory_structure.py  test_error_handling.py  test_repo_validation.py  test_version_check.py
